FEC-4308	 #comment fix playhead gap

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -450,7 +450,7 @@ body {
     width: 32px;
     height: 32px;
     margin-top: -8px;
-    margin-left: -0.5em;
+    margin-left: -0.7em;
     background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 31%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
     background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 30%,rgba(255,255,255,0) 31%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
     background: radial-gradient(ellipse at center,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 30%,rgba(255,255,255,0) 31%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
